CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
PROJECT(tfutils)

SET(CMAKE_CXX_STANDARD 17)

ADD_DEFINITIONS("-fPIC -Werror -Wall -Wno-format-security")

SET(ROOT_SYSTEM "/usr")
INCLUDE_DIRECTORIES(${ROOT_SYSTEM}/include/qt)
LINK_DIRECTORIES(${ROOT_SYSTEM}/lib)

ADD_EXECUTABLE(tfutils main.cpp)
TARGET_LINK_LIBRARIES(tfutils Qt5Xml Qt5Core)