CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
PROJECT(tfutils)

SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_STANDARD 17)

ADD_COMPILE_OPTIONS(-fPIC)
ADD_COMPILE_OPTIONS(-Werror)
ADD_COMPILE_OPTIONS(-Wall)

SET(ROOT_SYSTEM "/usr")
INCLUDE_DIRECTORIES(${ROOT_SYSTEM}/include/qt)
LINK_DIRECTORIES(${ROOT_SYSTEM}/lib)

ADD_EXECUTABLE(tfutils main.cpp)
TARGET_LINK_LIBRARIES(tfutils Qt5Xml Qt5Core)